[gd_scene load_steps=6 format=3 uid="uid://d2e2y7ecdbcvw"]

[ext_resource type="FontFile" path="res://Prefabs/Styles/Fonts/Size40Bold.tres" id="1"]
[ext_resource type="Script" uid="uid://dco55bhgvrm35" path="res://Prefabs/Elements/ToggleBetween.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://b5j8ga6gl06lb" path="res://Prefabs/Elements/PressTimer.tscn" id="3"]

[sub_resource type="StyleBoxFlat" id="11"]
bg_color = Color(0.14902, 0.6, 0.984314, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.737255, 0.878431, 0.992157, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="10"]
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="ToggleBetween" type="Panel"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 88.0
offset_right = 75.0
offset_bottom = 124.0
custom_minimum_size = Vector2(150, 0)
mouse_filter = 1
theme_override_styles/panel = SubResource("11")
script = ExtResource("2")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toggle" type="Panel" parent="."]
offset_left = 5.0
offset_top = 3.0
offset_right = 66.0
offset_bottom = 33.0
mouse_filter = 1
theme_override_styles/panel = SubResource("10")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftToggle" type="Label" parent="."]
anchor_bottom = 1.0
offset_left = -265.0
offset_top = -20.0
offset_right = -57.0
offset_bottom = 19.0
mouse_filter = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1")
text = "Left"
valign = 1

[node name="RightToggle" type="Label" parent="."]
self_modulate = Color(0.737255, 0.878431, 0.992157, 1)
anchor_bottom = 1.0
offset_left = 174.0
offset_top = -19.0
offset_right = 408.0
offset_bottom = 18.0
mouse_filter = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1")
text = "Right"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressTimer" parent="." instance=ExtResource("3")]
